added endpoint geteurekaapps
