# rest/api/static/swagger.yml
@@ -1,7 +1,7 @@
 "swagger": '2.0'
 info:
   description: |
-    This is estuary-discovery service.
+    This is estuary-discovery service. Estuary-discovery service will discover the apps registered with Eureka.
   version: "1.0.0"
   title: estuary-discovery
   termsOfService: http://swagger.io/terms/
@@ -14,7 +14,7 @@ info:
 basePath: /
 tags:
   - name: estuary-discovery
-    description: Estuary-discovery service which discovers the apps registered with Eureka.
+    description: Estuary-discovery service will discover the apps registered with Eureka.
     externalDocs:
       description: Find out more on github
       url: https://github.com/dinuta/estuary-discovery
@@ -127,137 +127,18 @@ paths:
           description: Get env var success
         404:
           description: Get env var failure
-  /gettestid:
+  /geteurekaapps:
     get:
       tags:
         - estuary-discovery
-      summary: Gets the currently running test id. NA in case test not running or it is already finished
+      summary: Gets all apps registered with Eureka.
       produces:
         - application/json
       responses:
         200:
-          description: Get test id success
+          description: Get apps success
         404:
-          description: Get test id failure
-  /gettestinfo:
-    get:
-      tags:
-        - estuary-discovery
-      summary: Gets information abot running tests, running processes, test status
-      produces:
-        - application/json
-      responses:
-        200:
-          description: Get test info success
-        404:
-          description: Get test info failure
-  /teststart/{id}:
-    post:
-      tags:
-        - estuary-discovery
-      summary: Starts the tests inside the container
-      consumes:
-        - text/plain
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          in: path
-          description: Test id set by the user
-          required: true
-          type: string
-        - name: test_file_content
-          in: body
-          description: List of commands to run. E.g. make/mvn/sh/npm
-          required: true
-          schema:
-            $ref: '#/components/schemas/test_file_content'
-      responses:
-        200:
-          description: test start success
-        404:
-          description: test start failure
-  /teststop:
-    get:
-      tags:
-        - estuary-discovery
-      summary: |
-        Stops one single command from the batch sent initially to /teststart endpoint(alpine).
-        Stops all commands with only one command(ubuntu).
-        Send as many /teststop requests as how many commands you want to stop(on alpine).
-      produces:
-        - application/json
-      responses:
-        200:
-          description: test stop success
-        404:
-          description: test stop failure
-  /getresultsfile:
-    post:
-      tags:
-        - estuary-discovery
-      summary: Gets the test results file
-      consumes:
-        - application/json
-        - application/x-www-form-urlencoded
-      produces:
-        - application/json
-      parameters:
-        - name: file
-          in: body
-          description: Target file path to get
-          required: false
-          schema:
-            $ref: '#/components/schemas/file'
-      responses:
-        200:
-          description: The content of the file in plain text
-        404:
-          description: Failure, the file content could not be read
-  /uploadtestconfig:
-    post:
-      tags:
-        - estuary-discovery
-      summary: Uploads a test configuration file
-      consumes:
-        - application/json
-        - application/x-www-form-urlencoded
-      produces:
-        - application/json
-      parameters:
-        - name: testconfig
-          in: body
-          description: Target file path and file content
-          required: false
-          schema:
-            $ref: '#/components/schemas/testconfig'
-      responses:
-        200:
-          description: The content of the file was uploaded successfully
-        404:
-          description: Failure, the file content could not be uploaded
-  /getresultsfolder:
-    post:
-      tags:
-        - estuary-discovery
-      summary: Gets the test results folder as zip archive
-      consumes:
-        - application/json
-        - application/x-www-form-urlencoded
-      produces:
-        - application/zip
-      parameters:
-        - name: folder
-          in: body
-          description: Target folder path to get as zip
-          required: false
-          schema:
-            $ref: '#/components/schemas/folder'
-      responses:
-        200:
-          description: The content of the folder as zip archive
-        404:
-          description: The content of the folder could not be obtained
+          description: Get apps failure
 components:
   schemas:
     file:
